--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,18 @@
 </head>
 <body>
 	<p>Welcome to the chat app</p>
+
+	<script src="/socket.io/socket.io.js"></script>
+	<script>
+		var socket = io(); // We're making the request from the client to the server to open up a web socket and keep that connection open.
+
+		socket.on('connect', () => {
+            console.log('Connected to server');
+        });
+
+		socket.on('disconnect', () => {
+            console.log('Disconnected from server');
+        })
+	</script>
 </body>
 </html>
